test/errors/structs/struct_self_reference_nonnullable_fail.hy
// EXPECT_DIAGNOSTIC: Struct 'Loop' must declare at least one constructor
// Non-nullable self references should be rejected with a clear diagnostic.

struct Loop
{
    Loop next
}
